# bikes

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __main__.py  internal_api.py
app/bot/: __init__.py
app/bot/handlers/: __init__.py  add_bike.py  alerts.py  analytics.py  auto_close.py  bike_card.py  breakdown.py  change_status.py  courier_shift.py  dashboard.py  decommission.py  list_bikes.py  menu.py  registration.py  repair.py  start.py  usage.py
app/bot/keyboards/: builders.py  callbacks.py
app/bot/states/: bike.py
app/core/: config.py  logging.py  tz.py
app/db/: base.py
app/db/models/: __init__.py  admin_user.py  bike.py  bike_alert.py  bike_breakdown.py  bike_breakdown_photo.py  bike_repair.py  bike_usage_log.py  bot_user.py  courier_shift.py  courier_shift_bike.py  store.py
app/middlewares/: db.py  role_access.py
docs/: dev_notes.md
docs/api/: database.md  roadmap.md
