[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "bikes-bot"
version = "0.1.0"
description = "Production Telegram bot for Bikes"
requires-python = ">=3.14"
dependencies = [
    "aiogram>=3.15,<4",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncmy>=0.2,<1",
    "pydantic-settings>=2.0,<3",
    "loguru>=0.7,<1",
    "apscheduler>=3.10,<4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9,<1",
    "mypy>=1.14,<2",
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
]

[tool.ruff]
target-version = "py314"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "ANN", "ASYNC", "S", "B", "A", "COM", "C4", "PT", "RET", "SIM", "TCH", "ARG", "ERA", "RUF"]
ignore = ["ANN101", "ANN102", "ANN401", "RUF001"]

[tool.mypy]
python_version = "3.14"
strict = true
plugins = ["pydantic.mypy"]
